--- a/GameStore/GameStore.Web/Views/Home/Index.cshtml
+++ b/GameStore/GameStore.Web/Views/Home/Index.cshtml
@@ -33,13 +33,13 @@
     <section class="intro-right">
         <h1 class="intro-header">@Localizer["We Knocked Em’ll"]</h1>
         <figure class="img-container">
-            <img width="100%" src="img/Home/uriel-soberanes-794026-unsplash copy.png" alt="person">
+            <img width="100%" src="img/Home/---------91886950.jpg" alt="person">
             <div class="image-text">
                 <h2>
-                    Sony Playstation VR
-                    <a href="#" >
-                        <img src="img/Home/Arrow.svg" class="arrow" alt="arrow">
-                    </a>
+                    @* Sony Playstation VR *@
+                    @* <a href="#" > *@
+                    @*     <img src="img/Home/Arrow.svg" class="arrow" alt="arrow"> *@
+                    @* </a> *@
                 </h2>
             </div>
         </figure>
