--- a/GameStore/GameStore.Web/wwwroot/css/_Layout.css
+++ b/GameStore/GameStore.Web/wwwroot/css/_Layout.css
@@ -27,7 +27,7 @@ a:focus {
 }
 
 .main-header {
-    background-image: url("../img/Header/florian-olivo-1167169-unsplash.png");
+    background-image: url("../img/Header/TopWithText.png");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
